@@ -8,7 +8,6 @@ import com.fasterxml.jackson.databind.node.TextNode;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Content;
-import com.iab.openrtb.request.Deal;
 import com.iab.openrtb.request.Dooh;
 import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.Imp;
@@ -21,8 +20,6 @@ import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
-import io.vertx.core.logging.Logger;
-import io.vertx.core.logging.LoggerFactory;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.collections4.map.CaseInsensitiveMap;
@@ -47,28 +44,28 @@ import org.prebid.server.auction.model.BidderRequest;
 import org.prebid.server.auction.model.BidderResponse;
 import org.prebid.server.auction.model.MultiBidConfig;
 import org.prebid.server.auction.model.StoredResponseResult;
-import org.prebid.server.auction.privacy.enforcement.PrivacyEnforcementService;
 import org.prebid.server.auction.model.TimeoutContext;
+import org.prebid.server.auction.privacy.enforcement.PrivacyEnforcementService;
 import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.auction.versionconverter.OrtbVersion;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.BidderCatalog;
+import org.prebid.server.bidder.BidderInfo;
 import org.prebid.server.bidder.HttpBidderRequester;
 import org.prebid.server.bidder.Usersyncer;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderSeatBid;
+import org.prebid.server.bidder.model.Price;
 import org.prebid.server.cookie.UidsCookie;
 import org.prebid.server.currency.CurrencyConversionService;
-import org.prebid.server.deals.DealsService;
-import org.prebid.server.deals.events.ApplicationEventService;
-import org.prebid.server.deals.model.TxnLog;
 import org.prebid.server.exception.InvalidRequestException;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.execution.Timeout;
 import org.prebid.server.execution.TimeoutFactory;
 import org.prebid.server.floors.PriceFloorAdjuster;
 import org.prebid.server.floors.PriceFloorEnforcer;
+import org.prebid.server.floors.PriceFloorProcessor;
 import org.prebid.server.hooks.execution.HookStageExecutor;
 import org.prebid.server.hooks.execution.model.ExecutionAction;
 import org.prebid.server.hooks.execution.model.ExecutionStatus;
@@ -87,6 +84,8 @@ import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.log.CriteriaLogManager;
 import org.prebid.server.log.HttpInteractionLogger;
+import org.prebid.server.log.Logger;
+import org.prebid.server.log.LoggerFactory;
 import org.prebid.server.metric.MetricName;
 import org.prebid.server.metric.Metrics;
 import org.prebid.server.model.CaseInsensitiveMultiMap;
@@ -111,8 +110,11 @@ import org.prebid.server.proto.openrtb.ext.request.ExtSite;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 import org.prebid.server.proto.openrtb.ext.request.TraceLevel;
+import org.prebid.server.proto.openrtb.ext.response.ExtAnalytics;
+import org.prebid.server.proto.openrtb.ext.response.ExtAnalyticsTags;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidResponse;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidResponsePrebid;
+import org.prebid.server.proto.openrtb.ext.response.ExtBidderError;
 import org.prebid.server.proto.openrtb.ext.response.ExtModules;
 import org.prebid.server.proto.openrtb.ext.response.ExtModulesTrace;
 import org.prebid.server.proto.openrtb.ext.response.ExtModulesTraceAnalyticsActivity;
@@ -124,8 +126,8 @@ import org.prebid.server.proto.openrtb.ext.response.ExtModulesTraceInvocationRes
 import org.prebid.server.proto.openrtb.ext.response.ExtModulesTraceStage;
 import org.prebid.server.proto.openrtb.ext.response.ExtModulesTraceStageOutcome;
 import org.prebid.server.settings.model.Account;
+import org.prebid.server.settings.model.AccountAnalyticsConfig;
 import org.prebid.server.util.HttpUtil;
-import org.prebid.server.util.LineItemUtil;
 import org.prebid.server.util.ObjectUtil;
 import org.prebid.server.util.StreamUtil;
 import org.prebid.server.validation.ResponseBidValidator;
@@ -146,14 +148,9 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-/**
- * Executes an OpenRTB v2.5-2.6 Auction.
- */
 public class ExchangeService {
 
     private static final Logger logger = LoggerFactory.getLogger(ExchangeService.class);
@@ -173,9 +170,9 @@ public class ExchangeService {
     private final double logSamplingRate;
     private final BidderCatalog bidderCatalog;
     private final StoredResponseProcessor storedResponseProcessor;
-    private final DealsService dealsService;
     private final PrivacyEnforcementService privacyEnforcementService;
     private final FpdResolver fpdResolver;
+    private final ImpAdjuster impAdjuster;
     private final SupplyChainResolver supplyChainResolver;
     private final DebugResolver debugResolver;
     private final MediaTypeProcessor mediaTypeProcessor;
@@ -187,12 +184,12 @@ public class ExchangeService {
     private final ResponseBidValidator responseBidValidator;
     private final CurrencyConversionService currencyService;
     private final BidResponseCreator bidResponseCreator;
-    private final ApplicationEventService applicationEventService;
     private final BidResponsePostProcessor bidResponsePostProcessor;
     private final HookStageExecutor hookStageExecutor;
     private final HttpInteractionLogger httpInteractionLogger;
     private final PriceFloorAdjuster priceFloorAdjuster;
     private final PriceFloorEnforcer priceFloorEnforcer;
+    private final PriceFloorProcessor priceFloorProcessor;
     private final DsaEnforcer dsaEnforcer;
     private final BidAdjustmentFactorResolver bidAdjustmentFactorResolver;
     private final Metrics metrics;
@@ -204,9 +201,9 @@ public class ExchangeService {
     public ExchangeService(double logSamplingRate,
                            BidderCatalog bidderCatalog,
                            StoredResponseProcessor storedResponseProcessor,
-                           DealsService dealsService,
                            PrivacyEnforcementService privacyEnforcementService,
                            FpdResolver fpdResolver,
+                           ImpAdjuster impAdjuster,
                            SupplyChainResolver supplyChainResolver,
                            DebugResolver debugResolver,
                            MediaTypeProcessor mediaTypeProcessor,
@@ -220,10 +217,10 @@ public class ExchangeService {
                            BidResponseCreator bidResponseCreator,
                            BidResponsePostProcessor bidResponsePostProcessor,
                            HookStageExecutor hookStageExecutor,
-                           ApplicationEventService applicationEventService,
                            HttpInteractionLogger httpInteractionLogger,
                            PriceFloorAdjuster priceFloorAdjuster,
                            PriceFloorEnforcer priceFloorEnforcer,
+                           PriceFloorProcessor priceFloorProcessor,
                            DsaEnforcer dsaEnforcer,
                            BidAdjustmentFactorResolver bidAdjustmentFactorResolver,
                            Metrics metrics,
@@ -235,9 +232,9 @@ public class ExchangeService {
         this.logSamplingRate = logSamplingRate;
         this.bidderCatalog = Objects.requireNonNull(bidderCatalog);
         this.storedResponseProcessor = Objects.requireNonNull(storedResponseProcessor);
-        this.dealsService = dealsService;
         this.privacyEnforcementService = Objects.requireNonNull(privacyEnforcementService);
         this.fpdResolver = Objects.requireNonNull(fpdResolver);
+        this.impAdjuster = Objects.requireNonNull(impAdjuster);
         this.supplyChainResolver = Objects.requireNonNull(supplyChainResolver);
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.mediaTypeProcessor = Objects.requireNonNull(mediaTypeProcessor);
@@ -251,10 +248,10 @@ public class ExchangeService {
         this.bidResponseCreator = Objects.requireNonNull(bidResponseCreator);
         this.bidResponsePostProcessor = Objects.requireNonNull(bidResponsePostProcessor);
         this.hookStageExecutor = Objects.requireNonNull(hookStageExecutor);
-        this.applicationEventService = applicationEventService;
         this.httpInteractionLogger = Objects.requireNonNull(httpInteractionLogger);
         this.priceFloorAdjuster = Objects.requireNonNull(priceFloorAdjuster);
         this.priceFloorEnforcer = Objects.requireNonNull(priceFloorEnforcer);
+        this.priceFloorProcessor = Objects.requireNonNull(priceFloorProcessor);
         this.dsaEnforcer = Objects.requireNonNull(dsaEnforcer);
         this.bidAdjustmentFactorResolver = Objects.requireNonNull(bidAdjustmentFactorResolver);
         this.metrics = Objects.requireNonNull(metrics);
@@ -264,13 +261,10 @@ public class ExchangeService {
         this.enabledStrictAppSiteDoohValidation = enabledStrictAppSiteDoohValidation;
     }
 
-    /**
-     * Runs an auction: delegates request to applicable bidders, gathers responses from them and constructs final
-     * response containing returned bids and additional information in extensions.
-     */
     public Future<AuctionContext> holdAuction(AuctionContext context) {
         return processAuctionRequest(context)
                 .compose(this::invokeResponseHooks)
+                .map(this::enrichWithAnalyticsTags)
                 .map(this::enrichWithHooksDebugInfo)
                 .map(this::updateHooksMetrics);
     }
@@ -301,15 +295,11 @@ public class ExchangeService {
 
         return storedResponseProcessor.getStoredResponseResult(bidRequest.getImp(), timeout)
                 .map(storedResponseResult -> populateStoredResponse(storedResponseResult, storedAuctionResponses))
-                .compose(storedResponseResult -> extractAuctionParticipations(
-                        receivedContext, storedResponseResult, aliases, bidderToMultiBid))
-
-                .map(auctionParticipations -> matchAndPopulateDeals(auctionParticipations, aliases, receivedContext))
-                .map(auctionParticipations -> postProcessDeals(auctionParticipations, receivedContext))
-                .map(auctionParticipations -> fillContext(receivedContext, auctionParticipations))
+                .compose(storedResponseResult ->
+                        extractAuctionParticipations(receivedContext, storedResponseResult, aliases, bidderToMultiBid)
+                                .map(receivedContext::with))
 
                 .map(context -> updateRequestMetric(context, uidsCookie, aliases, account, requestTypeMetric))
-
                 .compose(context -> CompositeFuture.join(
                                 context.getAuctionParticipations().stream()
                                         .map(auctionParticipation -> processAndRequestBids(
@@ -323,16 +313,21 @@ public class ExchangeService {
                         .map(CompositeFuture::<AuctionParticipation>list)
                         .map(storedResponseProcessor::updateStoredBidResponse)
                         .map(auctionParticipations -> storedResponseProcessor.mergeWithBidderResponses(
-                                auctionParticipations, storedAuctionResponses, bidRequest.getImp()))
+                                auctionParticipations,
+                                storedAuctionResponses,
+                                bidRequest.getImp(),
+                                context.getBidRejectionTrackers()))
                         .map(auctionParticipations -> dropZeroNonDealBids(auctionParticipations, debugWarnings))
                         .map(auctionParticipations -> validateAndAdjustBids(auctionParticipations, context, aliases))
                         .map(auctionParticipations -> updateResponsesMetrics(auctionParticipations, account, aliases))
                         .map(context::with))
                 // produce response from bidder results
                 .compose(context -> bidResponseCreator.create(context, cacheInfo, bidderToMultiBid)
-                        .map(bidResponse -> publishAuctionEvent(bidResponse, context))
-                        .map(bidResponse -> criteriaLogManager.traceResponse(logger, bidResponse,
-                                context.getBidRequest(), context.getDebugContext().isDebugEnabled()))
+                        .map(bidResponse -> criteriaLogManager.traceResponse(
+                                logger,
+                                bidResponse,
+                                context.getBidRequest(),
+                                context.getDebugContext().isDebugEnabled()))
                         .compose(bidResponse -> bidResponsePostProcessor.postProcess(
                                 context.getHttpRequest(), uidsCookie, bidRequest, bidResponse, account))
                         .map(context::with));
@@ -350,9 +345,6 @@ public class ExchangeService {
         return prebid != null ? prebid.getTargeting() : null;
     }
 
-    /**
-     * Creates {@link BidRequestCacheInfo} based on {@link BidRequest} model.
-     */
     private static BidRequestCacheInfo bidRequestCacheInfo(BidRequest bidRequest) {
         final ExtRequestTargeting targeting = targeting(bidRequest);
         final ExtRequestPrebid prebid = extRequestPrebid(bidRequest);
@@ -387,7 +379,6 @@ public class ExchangeService {
                         .build();
             }
         }
-
         return BidRequestCacheInfo.noCache();
     }
 
@@ -410,9 +401,8 @@ public class ExchangeService {
             final String codePrefix = prebidMultiBid.getTargetBidderCodePrefix();
 
             if (bidder != null && CollectionUtils.isNotEmpty(bidders)) {
-                debugWarnings.add(
-                        "Invalid MultiBid: bidder %s and bidders %s specified. Only bidder %s will be used."
-                                .formatted(bidder, bidders, bidder));
+                debugWarnings.add("Invalid MultiBid: bidder %s and bidders %s specified. Only bidder %s will be used."
+                        .formatted(bidder, bidders, bidder));
                 tryAddBidderWithMultiBid(bidder, maxBids, codePrefix, bidderToMultiBid, debugWarnings);
                 continue;
             }
@@ -481,44 +471,12 @@ public class ExchangeService {
                 entry -> new BidRejectionTracker(entry.getKey(), entry.getValue(), logSamplingRate)));
     }
 
-    /**
-     * Populates storedResponse parameter with stored {@link List<SeatBid>} and returns {@link List<Imp>} for which
-     * request to bidders should be performed.
-     */
     private static StoredResponseResult populateStoredResponse(StoredResponseResult storedResponseResult,
                                                                List<SeatBid> storedResponse) {
         storedResponse.addAll(storedResponseResult.getAuctionStoredResponse());
         return storedResponseResult;
     }
 
-    /**
-     * Takes an OpenRTB request and returns the OpenRTB requests sanitized for each bidder.
-     * <p>
-     * This will copy the {@link BidRequest} into a list of requests, where the bidRequest.imp[].ext field
-     * will only consist of the "prebid" field and the field for the appropriate bidder parameters. We will drop all
-     * extended fields beyond this context, so this will not be compatible with any other uses of the extension area
-     * i.e. the bidders will not see any other extension fields. If Imp extension name is alias, which is also defined
-     * in bidRequest.ext.prebid.aliases and valid, separate {@link BidRequest} will be created for this alias and sent
-     * to appropriate bidder.
-     * For example suppose {@link BidRequest} has two {@link Imp}s. First one with imp.ext.prebid.bidder.rubicon and
-     * imp.ext.prebid.bidder.rubiconAlias and second with imp.ext.prebid.bidder.appnexus and
-     * imp.ext.prebid.bidder.rubicon. Three {@link BidRequest}s will be created:
-     * 1. {@link BidRequest} with one {@link Imp}, where bidder extension points to rubiconAlias extension and will be
-     * sent to Rubicon bidder.
-     * 2. {@link BidRequest} with two {@link Imp}s, where bidder extension points to appropriate rubicon extension from
-     * original {@link BidRequest} and will be sent to Rubicon bidder.
-     * 3. {@link BidRequest} with one {@link Imp}, where bidder extension points to appnexus extension and will be sent
-     * to Appnexus bidder.
-     * <p>
-     * Each of the created {@link BidRequest}s will have bidrequest.user.buyerid field populated with the value from
-     * bidrequest.user.ext.prebid.buyerids or {@link UidsCookie} corresponding to bidder's family name unless buyerid
-     * is already in the original OpenRTB request (in this case it will not be overridden).
-     * In case if bidrequest.user.ext.prebid.buyerids contains values after extracting those values it will be cleared
-     * in order to avoid leaking of buyerids across bidders.
-     * <p>
-     * NOTE: the return list will only contain entries for bidders that both have the extension field in at least one
-     * {@link Imp}, and are known to {@link BidderCatalog} or aliases from bidRequest.ext.prebid.aliases.
-     */
     private Future<List<AuctionParticipation>> extractAuctionParticipations(
             AuctionContext context,
             StoredResponseResult storedResponseResult,
@@ -537,9 +495,13 @@ public class ExchangeService {
                 .toList();
         final Map<String, Map<String, String>> impBidderToStoredBidResponse =
                 storedResponseResult.getImpBidderToStoredBidResponse();
-
-        return makeAuctionParticipation(bidders, context, aliases, impBidderToStoredBidResponse,
-                imps, bidderToMultiBid);
+        return makeAuctionParticipation(
+                bidders,
+                context,
+                aliases,
+                impBidderToStoredBidResponse,
+                imps,
+                bidderToMultiBid);
     }
 
     private Set<String> bidderNamesFromImpExt(Imp imp, BidderAliases aliases) {
@@ -553,9 +515,6 @@ public class ExchangeService {
         return ext.get(PREBID_EXT).get(BIDDER_EXT);
     }
 
-    /**
-     * Checks if bidder name is valid in case when bidder can also be alias name.
-     */
     private boolean isValidBidder(String bidder, BidderAliases aliases) {
         return bidderCatalog.isValidName(bidder) || aliases.isAliasDefined(bidder);
     }
@@ -571,21 +530,6 @@ public class ExchangeService {
                 activityInvocationPayload);
     }
 
-    /**
-     * Splits the input request into requests which are sanitized for each bidder. Intended behavior is:
-     * <p>
-     * - bidrequest.imp[].ext will only contain the "prebid" field and a "bidder" field which has the params for
-     * the intended Bidder.
-     * <p>
-     * - bidrequest.user.buyeruid will be set to that Bidder's ID.
-     * <p>
-     * - bidrequest.ext.prebid.data.bidders will be removed.
-     * <p>
-     * - bidrequest.ext.prebid.bidders will be staying in corresponding bidder only.
-     * <p>
-     * - bidrequest.user.ext.data, bidrequest.app.ext.data, bidrequest.dooh.ext.data and bidrequest.site.ext.data
-     * will be removed for bidders that don't have first party data allowed.
-     */
     private Future<List<AuctionParticipation>> makeAuctionParticipation(
             List<String> bidders,
             AuctionContext context,
@@ -603,9 +547,15 @@ public class ExchangeService {
                 prepareUsers(bidders, context, aliases, biddersToConfigs, eidPermissions);
 
         return privacyEnforcementService.mask(context, bidderToUser, aliases)
-                .map(bidderToPrivacyResult ->
-                        getAuctionParticipation(bidderToPrivacyResult, bidRequest, impBidderToStoredResponse, imps,
-                                bidderToMultiBid, biddersToConfigs, aliases, context));
+                .map(bidderToPrivacyResult -> getAuctionParticipation(
+                        bidderToPrivacyResult,
+                        bidRequest,
+                        impBidderToStoredResponse,
+                        imps,
+                        bidderToMultiBid,
+                        biddersToConfigs,
+                        aliases,
+                        context));
     }
 
     private Map<String, ExtBidderConfigOrtb> getBiddersToConfigs(ExtRequestPrebid prebid) {
@@ -632,10 +582,6 @@ public class ExchangeService {
         return bidderToConfig;
     }
 
-    /**
-     * Retrieves user eids from {@link ExtRequestPrebid} and converts them to map, where keys are eids sources
-     * and values are allowed bidders
-     */
     private Map<String, List<String>> getEidPermissions(ExtRequestPrebid prebid) {
         final ExtRequestPrebidData prebidData = prebid != null ? prebid.getData() : null;
         final List<ExtRequestPrebidDataEidPermissions> eidPermissions = prebidData != null
@@ -646,9 +592,6 @@ public class ExchangeService {
                         ExtRequestPrebidDataEidPermissions::getBidders));
     }
 
-    /**
-     * Extracts a list of bidders for which first party data is allowed from {@link ExtRequestPrebidData} model.
-     */
     private static List<String> firstPartyDataBidders(ExtRequest requestExt) {
         final ExtRequestPrebid prebid = requestExt == null ? null : requestExt.getPrebid();
         final ExtRequestPrebidData data = prebid == null ? null : prebid.getData();
@@ -677,13 +620,6 @@ public class ExchangeService {
         return bidderToUser;
     }
 
-    /**
-     * Returns original {@link User} if user.buyeruid already contains uid value for bidder.
-     * Otherwise, returns new {@link User} containing updated {@link ExtUser} and user.buyeruid.
-     * <p>
-     * Also, removes user.ext.prebid (if present), user.ext.data and user.data (in case bidder does not use first
-     * party data).
-     */
     private User prepareUser(String bidder,
                              AuctionContext context,
                              BidderAliases aliases,
@@ -735,9 +671,6 @@ public class ExchangeService {
         return user != null ? user.getEids() : null;
     }
 
-    /**
-     * Returns {@link List<Eid>} allowed by {@param eidPermissions} per source per bidder.
-     */
     private List<Eid> resolveAllowedEids(List<Eid> userEids, String bidder, Map<String, List<String>> eidPermissions) {
         return CollectionUtils.emptyIfNull(userEids)
                 .stream()
@@ -745,10 +678,6 @@ public class ExchangeService {
                 .toList();
     }
 
-    /**
-     * Returns true if {@param source} allowed by {@param eidPermissions} for particular bidder taking into account
-     * ealiases.
-     */
     private boolean isUserEidAllowed(String source, Map<String, List<String>> eidPermissions, String bidder) {
         final List<String> allowedBidders = eidPermissions.get(source);
         return CollectionUtils.isEmpty(allowedBidders) || allowedBidders.stream()
@@ -756,9 +685,6 @@ public class ExchangeService {
                         || EID_ALLOWED_FOR_ALL_BIDDERS.equals(allowedBidder));
     }
 
-    /**
-     * Returns shuffled list of {@link AuctionParticipation} with {@link BidRequest}.
-     */
     private List<AuctionParticipation> getAuctionParticipation(
             List<BidderPrivacyResult> bidderPrivacyResults,
             BidRequest bidRequest,
@@ -811,9 +737,6 @@ public class ExchangeService {
         return bidderToPrebidParameters;
     }
 
-    /**
-     * Returns {@link AuctionParticipation} for the given bidder.
-     */
     private AuctionParticipation createAuctionParticipation(
             BidderPrivacyResult bidderPrivacyResult,
             Map<String, Map<String, String>> impBidderToStoredBidResponse,
@@ -830,7 +753,7 @@ public class ExchangeService {
         if (blockedRequestByTcf) {
             context.getBidRejectionTrackers()
                     .get(bidder)
-                    .rejectAll(BidRejectionReason.REJECTED_BY_PRIVACY);
+                    .rejectAll(BidRejectionReason.REQUEST_BLOCKED_PRIVACY);
 
             return AuctionParticipation.builder()
                     .bidder(bidder)
@@ -842,7 +765,7 @@ public class ExchangeService {
         final OrtbVersion ortbVersion = bidderSupportedOrtbVersion(bidder, bidderAliases);
         // stored bid response supported only for single imp requests
         final String storedBidResponse = impBidderToStoredBidResponse.size() == 1
-                ? impBidderToStoredBidResponse.get(imps.get(0).getId()).get(bidder)
+                ? impBidderToStoredBidResponse.get(imps.getFirst().getId()).get(bidder)
                 : null;
         final BidRequest preparedBidRequest = prepareBidRequest(
                 bidderPrivacyResult,
@@ -850,6 +773,7 @@ public class ExchangeService {
                 bidderToMultiBid,
                 biddersToConfigs,
                 bidderToPrebidBidders,
+                bidderAliases,
                 context);
 
         final BidderRequest bidderRequest = BidderRequest.builder()
@@ -876,10 +800,16 @@ public class ExchangeService {
                                          Map<String, MultiBidConfig> bidderToMultiBid,
                                          Map<String, ExtBidderConfigOrtb> biddersToConfigs,
                                          Map<String, JsonNode> bidderToPrebidBidders,
+                                         BidderAliases bidderAliases,
                                          AuctionContext context) {
 
-        final BidRequest bidRequest = context.getBidRequest();
         final String bidder = bidderPrivacyResult.getRequestBidder();
+        final BidRequest bidRequest = priceFloorProcessor.enrichWithPriceFloors(
+                context.getBidRequest().toBuilder().imp(imps).build(),
+                context.getAccount(),
+                bidder,
+                context.getPrebidErrors(),
+                context.getDebugWarnings());
         final boolean transmitTid = transmitTransactionId(bidder, context);
         final List<String> firstPartyDataBidders = firstPartyDataBidders(bidRequest.getExt());
         final boolean useFirstPartyData = firstPartyDataBidders == null || firstPartyDataBidders.stream()
@@ -925,11 +855,20 @@ public class ExchangeService {
         final boolean isDooh = !isApp && preparedDooh != null;
         final boolean isSite = !isApp && !isDooh && preparedSite != null;
 
+        final List<Imp> preparedImps = prepareImps(
+                bidder,
+                bidRequest,
+                transmitTid,
+                useFirstPartyData,
+                context.getAccount(),
+                bidderAliases,
+                context.getDebugWarnings());
+
         return bidRequest.toBuilder()
                 // User was already prepared above
                 .user(bidderPrivacyResult.getUser())
                 .device(bidderPrivacyResult.getDevice())
-                .imp(prepareImps(bidder, imps, bidRequest, transmitTid, useFirstPartyData, context.getAccount()))
+                .imp(preparedImps)
                 .app(isApp ? preparedApp : null)
                 .dooh(isDooh ? preparedDooh : null)
                 .site(isSite ? preparedSite : null)
@@ -955,20 +894,19 @@ public class ExchangeService {
         return createTids;
     }
 
-    /**
-     * For each given imp creates a new imp with extension crafted to contain only "prebid", "context" and
-     * bidder-specific extension.
-     */
     private List<Imp> prepareImps(String bidder,
-                                  List<Imp> imps,
                                   BidRequest bidRequest,
                                   boolean transmitTid,
                                   boolean useFirstPartyData,
-                                  Account account) {
+                                  Account account,
+                                  BidderAliases bidderAliases,
+                                  List<String> debugWarnings) {
 
-        return imps.stream()
+        return bidRequest.getImp().stream()
                 .filter(imp -> bidderParamsFromImpExt(imp.getExt()).hasNonNull(bidder))
-                .map(imp -> prepareImp(imp, bidder, bidRequest, transmitTid, useFirstPartyData, account))
+                .map(imp -> imp.toBuilder().ext(imp.getExt().deepCopy()).build())
+                .map(imp -> impAdjuster.adjust(imp, bidder, bidderAliases, debugWarnings))
+                .map(imp -> prepareImp(imp, bidder, bidRequest, transmitTid, useFirstPartyData, account, debugWarnings))
                 .toList();
     }
 
@@ -977,48 +915,42 @@ public class ExchangeService {
                            BidRequest bidRequest,
                            boolean transmitTid,
                            boolean useFirstPartyData,
-                           Account account) {
+                           Account account,
+                           List<String> debugWarnings) {
 
-        final BigDecimal adjustedFloor = resolveBidFloor(imp, bidder, bidRequest, account);
+        final Price adjustedPrice = resolveBidPrice(imp, bidder, bidRequest, account, debugWarnings);
         return imp.toBuilder()
-                .bidfloor(adjustedFloor)
-                .ext(prepareImpExt(bidder, imp.getExt(), adjustedFloor, transmitTid, useFirstPartyData))
+                .bidfloor(adjustedPrice.getValue())
+                .bidfloorcur(adjustedPrice.getCurrency())
+                .ext(prepareImpExt(bidder, imp.getExt(), adjustedPrice.getValue(), transmitTid, useFirstPartyData))
                 .build();
     }
 
-    /**
-     * @return Bidfloor divided by factor from {@link PriceFloorAdjuster}
-     */
-    private BigDecimal resolveBidFloor(Imp imp, String bidder, BidRequest bidRequest, Account account) {
-        return priceFloorAdjuster.adjustForImp(imp, bidder, bidRequest, account);
+    private Price resolveBidPrice(Imp imp,
+                                  String bidder,
+                                  BidRequest bidRequest,
+                                  Account account,
+                                  List<String> debugWarnings) {
+
+        return priceFloorAdjuster.adjustForImp(imp, bidder, bidRequest, account, debugWarnings);
     }
 
-    /**
-     * Creates a new imp extension for particular bidder having:
-     * <ul>
-     * <li>"prebid" field populated with an imp.ext.prebid field value, may be null</li>
-     * <li>"bidder" field populated with an imp.ext.prebid.bidder.{bidder} field value, not null</li>
-     * <li>"context" field populated with an imp.ext.context field value, may be null</li>
-     * <li>"data" field populated with an imp.ext.data field value, may be null</li>
-     * </ul>
-     */
     private ObjectNode prepareImpExt(String bidder,
                                      ObjectNode impExt,
                                      BigDecimal adjustedFloor,
                                      boolean transmitTid,
                                      boolean useFirstPartyData) {
-
-        final ObjectNode modifiedImpExt = impExt.deepCopy();
+        final JsonNode bidderNode = bidderParamsFromImpExt(impExt).get(bidder);
         final JsonNode impExtPrebid = prepareImpExt(impExt.get(PREBID_EXT), adjustedFloor);
         Optional.ofNullable(impExtPrebid).ifPresentOrElse(
-                ext -> modifiedImpExt.set(PREBID_EXT, ext),
-                () -> modifiedImpExt.remove(PREBID_EXT));
-        modifiedImpExt.set(BIDDER_EXT, bidderParamsFromImpExt(impExt).get(bidder));
+                ext -> impExt.set(PREBID_EXT, ext),
+                () -> impExt.remove(PREBID_EXT));
+        impExt.set(BIDDER_EXT, bidderNode);
         if (!transmitTid) {
-            modifiedImpExt.remove(TID_EXT);
+            impExt.remove(TID_EXT);
         }
 
-        return fpdResolver.resolveImpExt(modifiedImpExt, useFirstPartyData);
+        return fpdResolver.resolveImpExt(impExt, useFirstPartyData);
     }
 
     private JsonNode prepareImpExt(JsonNode extImpPrebidNode, BigDecimal adjustedFloor) {
@@ -1042,9 +974,6 @@ public class ExchangeService {
                 .build());
     }
 
-    /**
-     * Returns {@link ExtImpPrebid} from imp.ext.prebid {@link JsonNode}.
-     */
     private ExtImpPrebid extImpPrebid(JsonNode extImpPrebid) {
         try {
             return mapper.mapper().treeToValue(extImpPrebid, ExtImpPrebid.class);
@@ -1053,10 +982,6 @@ public class ExchangeService {
         }
     }
 
-    /**
-     * Checks whether to pass the app.ext.data and app.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked app with fpd config.
-     */
     private App prepareApp(App app, ObjectNode fpdApp, boolean useFirstPartyData) {
         final ExtApp appExt = app != null ? app.getExt() : null;
         final Content content = app != null ? app.getContent() : null;
@@ -1078,10 +1003,6 @@ public class ExchangeService {
         return maskedExtApp.isEmpty() ? null : maskedExtApp;
     }
 
-    /**
-     * Checks whether to pass the site.ext.data  and site.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked site with fpd config.
-     */
     private Site prepareSite(Site site, ObjectNode fpdSite, boolean useFirstPartyData) {
         final ExtSite siteExt = site != null ? site.getExt() : null;
         final Content content = site != null ? site.getContent() : null;
@@ -1103,10 +1024,6 @@ public class ExchangeService {
         return maskedExtSite.isEmpty() ? null : maskedExtSite;
     }
 
-    /**
-     * Checks whether to pass the dooh.ext.data and dooh.content.data depending on request having a first party data
-     * allowed for given bidder or not. And merge masked dooh with fpd config.
-     */
     private Dooh prepareDooh(Dooh dooh, ObjectNode fpdDooh, boolean useFirstPartyData) {
         final ExtDooh doohExt = dooh != null ? dooh.getExt() : null;
         final Content content = dooh != null ? dooh.getContent() : null;
@@ -1128,9 +1045,6 @@ public class ExchangeService {
         return updatedContent.isEmpty() ? null : updatedContent;
     }
 
-    /**
-     * Returns {@link Source} with corresponding request.ext.prebid.schains.
-     */
     private Source prepareSource(String bidder, BidRequest bidRequest, boolean transmitTid) {
         final Source receivedSource = bidRequest.getSource();
 
@@ -1148,12 +1062,6 @@ public class ExchangeService {
                 .build();
     }
 
-    /**
-     * Removes all bidders except the given bidder from bidrequest.ext.prebid.bidders to hide list of allowed bidders
-     * from initial request.
-     * <p>
-     * Also masks bidrequest.ext.prebid.schains.
-     */
     private ExtRequest prepareExt(String bidder,
                                   Map<String, JsonNode> bidderToPrebidBidders,
                                   Map<String, MultiBidConfig> bidderToMultiBid,
@@ -1209,45 +1117,12 @@ public class ExchangeService {
                 : null;
     }
 
-    /**
-     * Prepares parameters for specified bidder removing parameters for all other bidders.
-     * Returns null if there are no parameters for specified bidder.
-     */
     private ObjectNode prepareBidderParameters(ExtRequestPrebid prebid, String bidder) {
         final ObjectNode bidderParams = prebid != null ? prebid.getBidderparams() : null;
         final JsonNode params = bidderParams != null ? bidderParams.get(bidder) : null;
         return params != null ? mapper.mapper().createObjectNode().set(bidder, params) : null;
     }
 
-    private List<AuctionParticipation> matchAndPopulateDeals(List<AuctionParticipation> auctionParticipants,
-                                                             BidderAliases aliases,
-                                                             AuctionContext context) {
-
-        if (dealsService == null) {
-            return auctionParticipants;
-        }
-
-        final List<BidderRequest> updatedBidderRequests = auctionParticipants.stream()
-                .map(auctionParticipation -> !auctionParticipation.isRequestBlocked()
-                        ? dealsService.matchAndPopulateDeals(auctionParticipation.getBidderRequest(), aliases, context)
-                        : null)
-                .toList();
-
-        return IntStream.range(0, auctionParticipants.size())
-                .mapToObj(i -> auctionParticipants.get(i).toBuilder()
-                        .bidderRequest(updatedBidderRequests.get(i))
-                        .build())
-                .toList();
-    }
-
-    private static List<AuctionParticipation> postProcessDeals(List<AuctionParticipation> auctionParticipations,
-                                                               AuctionContext context) {
-        return DealsService.removePgDealsOnlyImpsWithoutDeals(auctionParticipations, context);
-    }
-
-    /**
-     * Updates 'account.*.request', 'request' and 'no_cookie_requests' metrics for each {@link AuctionParticipation} .
-     */
     private AuctionContext updateRequestMetric(AuctionContext context,
                                                UidsCookie uidsCookie,
                                                BidderAliases aliases,
@@ -1278,26 +1153,6 @@ public class ExchangeService {
         return context;
     }
 
-    private static AuctionContext fillContext(AuctionContext context,
-                                              List<AuctionParticipation> auctionParticipations) {
-
-        final Map<String, List<Deal>> impIdToDeals = new HashMap<>();
-        auctionParticipations.stream()
-                .map(AuctionParticipation::getBidderRequest)
-                .map(BidderRequest::getImpIdToDeals)
-                .filter(Objects::nonNull)
-                .map(Map::entrySet)
-                .flatMap(Collection::stream)
-                .forEach(entry -> impIdToDeals
-                        .computeIfAbsent(entry.getKey(), key -> new ArrayList<>())
-                        .addAll(entry.getValue()));
-
-        return context.toBuilder()
-                .bidRequest(DealsService.populateDeals(context.getBidRequest(), impIdToDeals))
-                .auctionParticipations(auctionParticipations)
-                .build();
-    }
-
     private Future<BidderResponse> processAndRequestBids(AuctionContext auctionContext,
                                                          BidderRequest bidderRequest,
                                                          Timeout timeout,
@@ -1306,16 +1161,20 @@ public class ExchangeService {
         final String bidderName = bidderRequest.getBidder();
         final MediaTypeProcessingResult mediaTypeProcessingResult = mediaTypeProcessor.process(
                 bidderRequest.getBidRequest(), bidderName, aliases, auctionContext.getAccount());
-
         final List<BidderError> mediaTypeProcessingErrors = mediaTypeProcessingResult.getErrors();
         if (mediaTypeProcessingResult.isRejected()) {
-            auctionContext.getBidRejectionTrackers()
-                    .get(bidderName)
-                    .rejectAll(BidRejectionReason.REJECTED_BY_MEDIA_TYPE);
-            final BidderSeatBid bidderSeatBid = BidderSeatBid.builder()
-                    .warnings(mediaTypeProcessingErrors)
-                    .build();
-            return Future.succeededFuture(BidderResponse.of(bidderName, bidderSeatBid, 0));
+            return processReject(
+                    auctionContext,
+                    BidRejectionReason.REQUEST_BLOCKED_UNSUPPORTED_MEDIA_TYPE,
+                    mediaTypeProcessingErrors,
+                    bidderName);
+        }
+        if (isUnacceptableCurrency(auctionContext, aliases.resolveBidder(bidderName))) {
+            return processReject(
+                    auctionContext,
+                    BidRejectionReason.REQUEST_BLOCKED_UNACCEPTABLE_CURRENCY,
+                    List.of(BidderError.generic("No match between the configured currencies and bidRequest.cur")),
+                    bidderName);
         }
 
         return Future.succeededFuture(mediaTypeProcessingResult.getBidRequest())
@@ -1324,6 +1183,34 @@ public class ExchangeService {
                         auctionContext, modifiedBidderRequest, timeout, aliases))
                 .map(bidderResponse -> bidderResponse.with(
                         addWarnings(bidderResponse.getSeatBid(), mediaTypeProcessingErrors)));
+    }
+
+    private boolean isUnacceptableCurrency(AuctionContext auctionContext, String originalBidderName) {
+        final List<String> requestCurrencies = auctionContext.getBidRequest().getCur();
+        final List<String> bidAcceptableCurrencies =
+                Optional.ofNullable(bidderCatalog.bidderInfoByName(originalBidderName))
+                        .map(BidderInfo::getCurrencyAccepted)
+                        .orElse(null);
+
+        if (CollectionUtils.isEmpty(requestCurrencies) || CollectionUtils.isEmpty(bidAcceptableCurrencies)) {
+            return false;
+        }
+
+        return !CollectionUtils.containsAny(requestCurrencies, bidAcceptableCurrencies);
+    }
+
+    private static Future<BidderResponse> processReject(AuctionContext auctionContext,
+                                                        BidRejectionReason bidRejectionReason,
+                                                        List<BidderError> warnings,
+                                                        String bidderName) {
+
+        auctionContext.getBidRejectionTrackers()
+                .get(bidderName)
+                .rejectAll(bidRejectionReason);
+        final BidderSeatBid bidderSeatBid = BidderSeatBid.builder()
+                .warnings(warnings)
+                .build();
+        return Future.succeededFuture(BidderResponse.of(bidderName, bidderSeatBid, 0));
     }
 
     private static BidderSeatBid addWarnings(BidderSeatBid seatBid, List<BidderError> warnings) {
@@ -1358,7 +1245,7 @@ public class ExchangeService {
         if (hookStageResult.isShouldReject()) {
             auctionContext.getBidRejectionTrackers()
                     .get(bidderRequest.getBidder())
-                    .rejectAll(BidRejectionReason.REJECTED_BY_HOOK);
+                    .rejectAll(BidRejectionReason.REQUEST_BLOCKED_GENERAL);
 
             return Future.succeededFuture(BidderResponse.of(bidderRequest.getBidder(), BidderSeatBid.empty(), 0));
         }
@@ -1485,13 +1372,6 @@ public class ExchangeService {
                 .toList();
     }
 
-    /**
-     * Validates bid response from exchange.
-     * <p>
-     * Removes invalid bids from response and adds corresponding error to {@link BidderSeatBid}.
-     * <p>
-     * Returns input argument as the result if no errors found or creates new {@link BidderResponse} otherwise.
-     */
     private AuctionParticipation validBidderResponse(AuctionParticipation auctionParticipation,
                                                      AuctionContext auctionContext,
                                                      BidderAliases aliases) {
@@ -1509,18 +1389,13 @@ public class ExchangeService {
         final List<String> requestCurrencies = bidRequest.getCur();
         if (requestCurrencies.size() > 1) {
             errors.add(BidderError.badInput("Cur parameter contains more than one currency. %s will be used"
-                    .formatted(requestCurrencies.get(0))));
+                    .formatted(requestCurrencies.getFirst())));
         }
 
         final List<BidderBid> bids = seatBid.getBids();
         final List<BidderBid> validBids = new ArrayList<>(bids.size());
-        final TxnLog txnLog = auctionContext.getTxnLog();
-        final String bidder = bidderResponse.getBidder();
 
         for (final BidderBid bid : bids) {
-            final String lineItemId = LineItemUtil.lineItemIdFrom(bid.getBid(), bidRequest.getImp(), mapper);
-            maybeRecordInTxnLog(lineItemId, () -> txnLog.lineItemsReceivedFromBidder().get(bidder));
-
             final ValidationResult validationResult = responseBidValidator.validate(
                     bid,
                     bidderResponse.getBidder(),
@@ -1529,11 +1404,6 @@ public class ExchangeService {
 
             if (validationResult.hasWarnings() || validationResult.hasErrors()) {
                 errors.add(makeValidationBidderError(bid.getBid(), validationResult));
-            }
-
-            if (validationResult.hasErrors()) {
-                maybeRecordInTxnLog(lineItemId, txnLog::lineItemsResponseInvalidated);
-                continue;
             }
 
             if (!validationResult.hasErrors()) {
@@ -1562,26 +1432,6 @@ public class ExchangeService {
         return BidderError.invalidBid("BidId `" + bidId + "` validation messages: " + validationErrors);
     }
 
-    private static void maybeRecordInTxnLog(String lineItemId, Supplier<Set<String>> metricSupplier) {
-        if (lineItemId != null) {
-            metricSupplier.get().add(lineItemId);
-        }
-    }
-
-    private BidResponse publishAuctionEvent(BidResponse bidResponse, AuctionContext auctionContext) {
-        if (applicationEventService != null) {
-            applicationEventService.publishAuctionEvent(auctionContext);
-        }
-        return bidResponse;
-    }
-
-    /**
-     * Performs changes on {@link Bid}s price depends on different between adServerCurrency and bidCurrency,
-     * and adjustment factor. Will drop bid if currency conversion is needed but not possible.
-     * <p>
-     * This method should always be invoked after {@link ExchangeService#validBidderResponse} to make sure
-     * {@link Bid#getPrice()} is not empty.
-     */
     private AuctionParticipation applyBidPriceChanges(AuctionParticipation auctionParticipation,
                                                       BidRequest bidRequest) {
         if (auctionParticipation.isRequestBlocked()) {
@@ -1598,7 +1448,7 @@ public class ExchangeService {
 
         final List<BidderBid> updatedBidderBids = new ArrayList<>(bidderBids.size());
         final List<BidderError> errors = new ArrayList<>(seatBid.getErrors());
-        final String adServerCurrency = bidRequest.getCur().get(0);
+        final String adServerCurrency = bidRequest.getCur().getFirst();
 
         for (final BidderBid bidderBid : bidderBids) {
             try {
@@ -1686,13 +1536,6 @@ public class ExchangeService {
         return Math.toIntExact(clock.millis() - startTime);
     }
 
-    /**
-     * Updates 'request_time', 'responseTime', 'timeout_request', 'error_requests', 'no_bid_requests',
-     * 'prices' metrics for each {@link AuctionParticipation}.
-     * <p>
-     * This method should always be invoked after {@link ExchangeService#validBidderResponse} to make sure
-     * {@link Bid#getPrice()} is not empty.
-     */
     private List<AuctionParticipation> updateResponsesMetrics(List<AuctionParticipation> auctionParticipations,
                                                               Account account,
                                                               BidderAliases aliases) {
@@ -1716,8 +1559,8 @@ public class ExchangeService {
                 for (final BidderBid bidderBid : bidderBids) {
                     final Bid bid = bidderBid.getBid();
                     final long cpm = bid.getPrice().multiply(THOUSAND).longValue();
-                    metrics.updateAdapterBidMetrics(bidder, account, cpm, bid.getAdm() != null,
-                            bidderBid.getType().toString());
+                    final String bidType = bidderBid.getType().toString();
+                    metrics.updateAdapterBidMetrics(bidder, account, cpm, bid.getAdm() != null, bidType);
                 }
             }
 
@@ -1741,9 +1584,6 @@ public class ExchangeService {
                 .map(auctionContext::with);
     }
 
-    /**
-     * Resolves {@link MetricName} by {@link BidderError.Type} value.
-     */
     private static MetricName bidderErrorTypeToMetric(BidderError.Type errorType) {
         return switch (errorType) {
             case bad_input -> MetricName.badinput;
@@ -1751,8 +1591,103 @@ public class ExchangeService {
             case failed_to_request_bids -> MetricName.failedtorequestbids;
             case timeout -> MetricName.timeout;
             case invalid_bid -> MetricName.bid_validation;
-            case rejected_ipf, generic, invalid_creative -> MetricName.unknown_error;
+            case rejected_ipf, generic -> MetricName.unknown_error;
         };
+    }
+
+    private AuctionContext enrichWithAnalyticsTags(AuctionContext context) {
+        final boolean clientDetailsEnabled = isClientDetailsEnabled(context);
+        if (!clientDetailsEnabled) {
+            return context;
+        }
+
+        final boolean allowClientDetails = Optional.ofNullable(context.getAccount())
+                .map(Account::getAnalytics)
+                .map(AccountAnalyticsConfig::isAllowClientDetails)
+                .orElse(false);
+
+        if (!allowClientDetails) {
+            return addClientDetailsWarning(context);
+        }
+
+        final List<ExtAnalyticsTags> extAnalyticsTags = toExtAnalyticsTags(context);
+
+        if (extAnalyticsTags == null) {
+            return context;
+        }
+
+        final BidResponse bidResponse = context.getBidResponse();
+        final Optional<ExtBidResponse> ext = Optional.ofNullable(bidResponse.getExt());
+        final Optional<ExtBidResponsePrebid> extPrebid = ext.map(ExtBidResponse::getPrebid);
+
+        final ExtBidResponsePrebid updatedExtPrebid = extPrebid
+                .map(ExtBidResponsePrebid::toBuilder)
+                .orElse(ExtBidResponsePrebid.builder())
+                .analytics(ExtAnalytics.of(extAnalyticsTags))
+                .build();
+
+        final ExtBidResponse updatedExt = ext
+                .map(ExtBidResponse::toBuilder)
+                .orElse(ExtBidResponse.builder())
+                .prebid(updatedExtPrebid)
+                .build();
+
+        final BidResponse updatedBidResponse = bidResponse.toBuilder().ext(updatedExt).build();
+        return context.with(updatedBidResponse);
+    }
+
+    private static boolean isClientDetailsEnabled(AuctionContext context) {
+        final JsonNode analytics = Optional.ofNullable(context.getBidRequest())
+                .map(BidRequest::getExt)
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getAnalytics)
+                .orElse(null);
+
+        if (notObjectNode(analytics)) {
+            return false;
+        }
+
+        final JsonNode options = analytics.get("options");
+        if (notObjectNode(options)) {
+            return false;
+        }
+
+        final JsonNode enableClientDetails = options.get("enableclientdetails");
+        return enableClientDetails != null
+                && enableClientDetails.isBoolean()
+                && enableClientDetails.asBoolean();
+    }
+
+    private static boolean notObjectNode(JsonNode jsonNode) {
+        return jsonNode == null || !jsonNode.isObject();
+    }
+
+    private static AuctionContext addClientDetailsWarning(AuctionContext context) {
+        final BidResponse bidResponse = context.getBidResponse();
+        final Optional<ExtBidResponse> ext = Optional.ofNullable(bidResponse.getExt());
+
+        final Map<String, List<ExtBidderError>> warnings = ext
+                .map(ExtBidResponse::getWarnings)
+                .orElse(Collections.emptyMap());
+        final List<ExtBidderError> prebidWarnings = ObjectUtils.defaultIfNull(
+                warnings.get(BidResponseCreator.DEFAULT_DEBUG_KEY),
+                Collections.emptyList());
+
+        final List<ExtBidderError> updatedPrebidWarnings = new ArrayList<>(prebidWarnings);
+        updatedPrebidWarnings.add(ExtBidderError.of(
+                BidderError.Type.generic.getCode(),
+                "analytics.options.enableclientdetails not enabled for account"));
+        final Map<String, List<ExtBidderError>> updatedWarnings = new HashMap<>(warnings);
+        updatedWarnings.put(BidResponseCreator.DEFAULT_DEBUG_KEY, updatedPrebidWarnings);
+
+        final ExtBidResponse updatedExt = ext
+                .map(ExtBidResponse::toBuilder)
+                .orElse(ExtBidResponse.builder())
+                .warnings(updatedWarnings)
+                .build();
+
+        final BidResponse updatedBidResponse = bidResponse.toBuilder().ext(updatedExt).build();
+        return context.with(updatedBidResponse);
     }
 
     private AuctionContext enrichWithHooksDebugInfo(AuctionContext context) {
@@ -1944,6 +1879,21 @@ public class ExchangeService {
                 : null;
 
         return ExtModulesTraceAnalyticsResult.of(result.status(), result.values(), extAppliedTo);
+    }
+
+    private static List<ExtAnalyticsTags> toExtAnalyticsTags(AuctionContext context) {
+        return context.getHookExecutionContext().getStageOutcomes().entrySet().stream()
+                .flatMap(stageToExecutionOutcome -> stageToExecutionOutcome.getValue().stream()
+                        .map(StageExecutionOutcome::getGroups)
+                        .flatMap(Collection::stream)
+                        .map(GroupExecutionOutcome::getHooks)
+                        .flatMap(Collection::stream)
+                        .filter(hookExecutionOutcome -> hookExecutionOutcome.getAnalyticsTags() != null)
+                        .map(hookExecutionOutcome -> ExtAnalyticsTags.of(
+                                stageToExecutionOutcome.getKey(),
+                                hookExecutionOutcome.getHookId().getModuleCode(),
+                                toTraceAnalyticsTags(hookExecutionOutcome.getAnalyticsTags()))))
+                .toList();
     }
 
     private AuctionContext updateHooksMetrics(AuctionContext context) {
