@@ -19,6 +19,7 @@ import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.auction.DebugResolver;
 import org.prebid.server.auction.FpdResolver;
+import org.prebid.server.auction.GeoLocationServiceWrapper;
 import org.prebid.server.auction.ImplicitParametersExtractor;
 import org.prebid.server.auction.OrtbTypesResolver;
 import org.prebid.server.auction.PriceGranularity;
@@ -96,6 +97,7 @@ public class AmpRequestFactory {
     private final AmpPrivacyContextFactory ampPrivacyContextFactory;
     private final DebugResolver debugResolver;
     private final JacksonMapper mapper;
+    private final GeoLocationServiceWrapper geoLocationServiceWrapper;
 
     public AmpRequestFactory(Ortb2RequestFactory ortb2RequestFactory,
                              StoredRequestProcessor storedRequestProcessor,
@@ -107,7 +109,8 @@ public class AmpRequestFactory {
                              FpdResolver fpdResolver,
                              AmpPrivacyContextFactory ampPrivacyContextFactory,
                              DebugResolver debugResolver,
-                             JacksonMapper mapper) {
+                             JacksonMapper mapper,
+                             GeoLocationServiceWrapper geoLocationServiceWrapper) {
 
         this.ortb2RequestFactory = Objects.requireNonNull(ortb2RequestFactory);
         this.storedRequestProcessor = Objects.requireNonNull(storedRequestProcessor);
@@ -120,6 +123,7 @@ public class AmpRequestFactory {
         this.debugResolver = Objects.requireNonNull(debugResolver);
         this.ampPrivacyContextFactory = Objects.requireNonNull(ampPrivacyContextFactory);
         this.mapper = Objects.requireNonNull(mapper);
+        this.geoLocationServiceWrapper = Objects.requireNonNull(geoLocationServiceWrapper);
     }
 
     /**
@@ -142,6 +146,12 @@ public class AmpRequestFactory {
 
                 .map(auctionContext -> auctionContext.with(debugResolver.debugContextFrom(auctionContext)))
 
+                .compose(auctionContext -> geoLocationServiceWrapper.lookup(auctionContext)
+                        .map(auctionContext::with))
+
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithGeolocationData(auctionContext)
+                        .map(auctionContext::with))
+
                 .compose(auctionContext -> gppService.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
@@ -154,17 +164,13 @@ public class AmpRequestFactory {
                 .compose(auctionContext -> ampPrivacyContextFactory.contextFrom(auctionContext)
                         .map(auctionContext::with))
 
-                .map(auctionContext -> auctionContext.with(
-                        ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)))
+                .compose(auctionContext -> ortb2RequestFactory.enrichBidRequestWithAccountAndPrivacyData(auctionContext)
+                        .map(auctionContext::with))
 
                 .compose(auctionContext -> ortb2RequestFactory.executeProcessedAuctionRequestHooks(auctionContext)
                         .map(auctionContext::with))
 
-                .compose(ortb2RequestFactory::populateUserAdditionalInfo)
-
-                .map(ortb2RequestFactory::enrichWithPriceFloors)
-
-                .map(auctionContext -> ortb2RequestFactory.updateTimeout(auctionContext, startTime))
+                .map(ortb2RequestFactory::updateTimeout)
 
                 .recover(ortb2RequestFactory::restoreResultFromRejection);
     }
@@ -185,9 +191,12 @@ public class AmpRequestFactory {
 
         final String addtlConsent = addtlConsentFromQueryStringParams(httpRequest);
         final Integer gdpr = gdprFromQueryStringParams(httpRequest);
-        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(httpRequest);
-        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Integer debug = debugFromQueryStringParam(httpRequest);
+        final GppSidExtraction gppSidExtraction = gppSidFromQueryStringParams(
+                httpRequest,
+                debug != null && debug == 1,
+                auctionContext.getDebugWarnings());
+        final String gpc = implicitParametersExtractor.gpcFrom(httpRequest);
         final Long timeout = timeoutFromQueryString(httpRequest);
 
         final BidRequest bidRequest = BidRequest.builder()
@@ -334,7 +343,10 @@ public class AmpRequestFactory {
         return null;
     }
 
-    private static GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest) {
+    private GppSidExtraction gppSidFromQueryStringParams(HttpRequestContext httpRequest,
+                                                         boolean debugEnabled,
+                                                         List<String> debugWarnings) {
+
         final String gppSidParam = httpRequest.getQueryParams().get(GPP_SID_PARAM);
 
         try {
@@ -346,6 +358,9 @@ public class AmpRequestFactory {
 
             return GppSidExtraction.success(gppSid);
         } catch (IllegalArgumentException e) {
+            if (debugEnabled) {
+                debugWarnings.add("Failed to parse gppSid: '%s'".formatted(gppSidParam));
+            }
             return GppSidExtraction.failed();
         }
     }
@@ -446,7 +461,7 @@ public class AmpRequestFactory {
     private BidRequest fillExplicitParameters(BidRequest bidRequest) {
         final List<Imp> imps = bidRequest.getImp();
         // Force HTTPS as AMP requires it, but pubs can forget to set it.
-        final Imp imp = imps.get(0);
+        final Imp imp = imps.getFirst();
         final Integer secure = imp.getSecure();
         final boolean setSecure = secure == null || secure != 1;
 
@@ -477,7 +492,7 @@ public class AmpRequestFactory {
                 || setDefaultCache) {
 
             result = bidRequest.toBuilder()
-                    .imp(setSecure ? Collections.singletonList(imps.get(0).toBuilder().secure(1).build()) : imps)
+                    .imp(setSecure ? Collections.singletonList(imps.getFirst().toBuilder().secure(1).build()) : imps)
                     .ext(extRequest(
                             bidRequest,
                             setDefaultTargeting,
@@ -499,7 +514,7 @@ public class AmpRequestFactory {
         ortbTypesResolver.normalizeTargeting(targetingNode, errors, referer);
 
         final Site updatedSite = overrideSite(bidRequest.getSite());
-        final Imp updatedImp = overrideImp(bidRequest.getImp().get(0), httpRequest, targetingNode);
+        final Imp updatedImp = overrideImp(bidRequest.getImp().getFirst(), httpRequest, targetingNode);
 
         if (ObjectUtils.anyNotNull(updatedSite, updatedImp)) {
             return bidRequest.toBuilder()
